<resources>
    <string name="app_name">OnlyBeans</string>
    <string name="email_input_label">Email</string>
    <string name="create_password_input_label">Create a password</string>
    <string name="password_input_label">Password</string>
    <string name="signup_cta_label">Sign Up</string>
    <string name="signup_title">Sign up</string>
    <string name="unconfirmed_account_button_label">Complete Sign Up</string>
    <string name="unconfirmed_account_message">We\'ve sent a verification code to %s</string>
    <string name="unconfirmed_account_code_input_hint">1234</string>
    <string name="signup_signin_hint">Already have an OnlyBeans account?</string>
    <string name="signin_signup_hint">Don\'t have an OnlyBeans account yet?</string>
    <string name="signup_signin_cta_label">Sign in</string>
    <string name="signin_title">Sign in</string>
    <string name="signin_cta_label">Sign in</string>
    <string name="signin_signup_cta_label">Sign up</string>
    <string name="sign_out_label">Sign out</string>
    <string name="open_camera_label">Take a photo…</string>
    <string name="no_camera_error">Could not find a camera on this device</string>
    <string name="capture_error">Something went wrong - could not capture photo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_post_description_hint">Add a description...</string>
    <string name="create_post_submit_label">Post</string>
    <string name="comment_count_label">%s comments</string>
    <string name="add_comment_hint">Add a comment</string>
    <string name="signup_name_input_label">Display Name</string>
    <string name="sign_up_profile_details">Profile Details</string>
    <string name="sign_up_done">Save</string>
    <string name="searching_location_label">Searching for location...</string>
    <string name="found_location_label">Your OnlyBeans post will be tagged with your location</string>
    <string name="post_distance_km">%skm</string>
    <string name="select_photo_label">Select from gallery...</string>
</resources>
