<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.signup.EditProfileFragment">

    <data>
        <variable
            name="model"
            type="com.camtittle.photosharing.ui.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/defaultPadding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="40dp"
                android:text="@string/sign_up_profile_details"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/signupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/signup_name_input_label"
                android:inputType="textPersonName"
                android:paddingTop="@dimen/defaultPadding"
                android:text="@={model.model.name}" />

            <Button
                android:id="@+id/editProfileSubmitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_done" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#008D2424"
                android:visibility="gone" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
